# Neural-File-System

./: Cargo.toml  LICENSE  NOTICE  README.md  plan.md
crates/neuralfs-cli/: Cargo.toml
crates/neuralfs-cli/src/: client.rs  main.rs
crates/neuralfs-cross/: Cargo.toml
crates/neuralfs-cross/src/: main.rs
crates/neuralfs-daemon/: Cargo.toml
crates/neuralfs-daemon/src/: classifier.rs  config.rs  indexer.rs  install.rs  ipc.rs  lib.rs  logging.rs  main.rs  mountfs.rs  pathcache.rs  protocol.rs  scorer.rs  search.rs  state.rs  store.rs  watcher.rs  winfsphost.rs
crates/neuralfs-fs/: Cargo.toml
crates/neuralfs-fs/src/: blockstore.rs  cache.rs  fs.rs  inode.rs  lib.rs
crates/neuralfs-linux/: Cargo.toml
crates/neuralfs-linux/src/: main.rs
crates/neuralfs-windows/: Cargo.toml
crates/neuralfs-windows/src/: main.rs
