[workspace]
resolver = "2"
members = [
    "crates/neuralfs-fs",
    "crates/neuralfs-daemon",
    "crates/neuralfs-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/turtle170/Neural-File-System"

[profile.release]
opt-level = 3
lto = true
