[package]
name = "neuralfs-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nfs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
