[package]
name = "neuralfs-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "neuralfs"
path = "src/main.rs"

[dependencies]
neuralfs-fs = { path = "../neuralfs-fs" }
base64 = "0.22"
parking_lot = "0.12"
notify = "6"
sled = "0.34"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
ndarray = { version = "0.15", features = ["serde"] }
chrono = { version = "0.4", features = ["clock"] }
log = { version = "0.4", features = ["std"] }
dirs = "5"
anyhow = "1"
toml = "0.8"

# FUSE user-mode filesystem hook (Linux/WSL only). Enable with --features fuse.
fuser = { version = "0.14", optional = true, default-features = false }
libc = { version = "0.2", optional = true }

[features]
fuse = ["dep:fuser", "dep:libc"]
