[package]
name = "neuralfs-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# NOTE: this crate's default build and `--features fuse` build are pure
# Apache-2.0 (see ../../LICENSE). The optional `winfsp` feature links the
# GPL-3.0-licensed `winfsp`/`winfsp-sys` crates; binaries built with
# `--features winfsp` are therefore GPL-3.0 combined works. See ../../NOTICE.

[lib]
path = "src/lib.rs"

[dependencies]
neuralfs-fs = { path = "../neuralfs-fs" }
base64 = "0.22"
parking_lot = "0.12"
notify = "6"
sled = "0.34"
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
ndarray = { version = "0.15", features = ["serde"] }
chrono = { version = "0.4", features = ["clock"] }
log = { version = "0.4", features = ["std"] }
dirs = "5"
anyhow = "1"
toml = "0.8"

# FUSE user-mode filesystem hook (Linux/WSL only). Enable with --features fuse.
fuser = { version = "0.14", optional = true, default-features = false, features = ["abi-7-23"] }
libc = { version = "0.2", optional = true }

# WinFsp drive-letter mount (Windows only). Enable with --features winfsp.
# Requires WinFsp + its Developer package installed (the `system` feature reads
# the install path from the registry). NOTE: the winfsp crate is GPL-3.0.
winfsp = { version = "0.13", optional = true, features = ["system"] }
windows = { version = "0.61", optional = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
] }
widestring = { version = "1", optional = true }

[features]
# The brand string is passed in at runtime by each variant binary's main(), so
# no per-variant feature is needed for identity. These features only gate which
# native mount compiles in.
fuse = ["dep:fuser", "dep:libc"]
winfsp = ["dep:winfsp", "dep:windows", "dep:widestring"]
